--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,7 +6,7 @@
 * {
     padding: 0;
     margin: 0;
-    color: var(--color-dark);
+    color: var(--color-black);
     font-family: 'Overpass', sans-serif;
 }
 
