[update] Forms pages, utils, etc

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -2,4 +2,6 @@
     --color-black: #222;
 	--color-gray: rgb(223, 223, 223);
 	--color-main: #00f08d;
+	--color-yellow: #ffc93b;
+	--color-danger: #d92d14;
 }
